# effluent

./: .env.example  .gitignore  ALL_FIXES_COMPLETE.md  ASYNC_BUGS_INVESTIGATION.md  COMPLETE_ASYNC_BUGS_LIST.md  FIXES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  MODEL_SCHEMA_REVIEW.md  PLAN-tax-reduction-features.md  PRODUCTION_READINESS.md  PR_DESCRIPTION.md  README.md  SCENARIO_ENGINE_AUDIT_REPORT.md  SECURITY_AUDIT_IMPLEMENTATION_PLAN.md  TASK-01-backend-setup.md  TASK-02-account-models.md  TASK-03-04-IMPLEMENTATION-SUMMARY.md  TASK-03-recurring-flows.md  TASK-04-tax-calculations.md  TASK-05-06-IMPLEMENTATION-SUMMARY.md  TASK-05-metrics-insights.md  TASK-06-onboarding-wizard.md  TASK-07-frontend-setup.md  TASK-08-dashboard-ui.md  TASK-09-api-endpoints.md  TASK-10-scenario-engine.md  TASK-11-scenario-ui.md  TASK-12-deployment-files.md  TASK-13.md  TASK-14.md  TASK-15.md  TASK-16-v3.md  TASK-17-v3.md  TASK-18-REVISED.md  TASK-19-CHARTS.md  TECHNICAL_DOCUMENTATION.md  docker-compose.prod.yml  docker-compose.yml  validate_tasks_3_4.py  validate_tasks_3_4_static.py  (+1 more)
backend/: conftest.py  pyproject.toml  reset_migrations.py  test_models.py
backend/apps/accounts/: admin.py  models.py  serializers.py  views.py
backend/apps/actions/: __init__.py  apps.py  templates.py  views.py
backend/apps/core/: admin.py  auth_views.py  authentication.py  exception_handlers.py  managers.py  mixins.py  models.py  monitoring.py  (+5 more)
backend/config/: __init__.py  celery.py  urls.py  wsgi.py
backend/docker/: Dockerfile  Dockerfile.prod  entrypoint.sh
backend/requirements/: base.txt  dev.txt
(+317 files in other folders)
