[project]
name = "effluent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "django-filter>=24.0",
    "psycopg[binary]>=3.1",
    "python-dateutil>=2.9",
    "whitenoise>=6.6",
    "celery[redis]>=5.3",
    "django-celery-beat>=2.5",
    "django-celery-results>=2.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
addopts = "-v --tb=short"
